# gbNetwork

./: .gitignore  CMakeLists.txt  README.md  gbAppPkg.cpp  gbAppPkg.h  gbByteOrderAmend.h  gbCommunicator.cpp  gbCommunicator.h  gbDefaultComm.cpp  gbDefaultComm.h  gbEventMachine.cpp  gbEventMachine.h  gbFrameData.cpp  gbFrameData.h  gbIOEvent.cpp  gbIOEvent.h  gbIOEventHandler.cpp  gbIOEventHandler.h  gbIOTunnel.cpp  gbIOTunnel.h  gbLNByte.cpp  gbLNByte.h  gbRawData.cpp  gbRawData.h  gbReceptionistComm.cpp  gbSocket.cpp  gbSocket.h  gbSocketData.cpp  gbSocketData.h  gbTCPPkg.cpp  gbTCPPkg.h  gbType.h  gbUDPData.cpp  gbUDPData.h  gbWatchdogComm.cpp  gbWatchdogComm.h  note.org  setup.sh
CMake/: FindgbUtils.cmake  Findlibevent.cmake  Findlibtheron.cmake
Client/: CMakeLists.txt  gbAppPkg.cpp  gbAppPkg.h  gbClientCore.cpp  gbClientCore.h  gbClntIOEventHandler.cpp  gbClntIOEventHandler.h  gbClntIORecvDataHandler.cpp  gbClntIORecvDataHandler.h  gbNWClient.cpp  gbNWClient.h  gbRawData.cpp  gbRawData.h  test.cpp
Client/Core/: gbClientCore.cpp  gbClientCore.h
CommMsg/: gbCommMsg.proto  gbDefaultCommMsg.proto
Server/: CMakeLists.txt  gbActor.cpp  gbActor.h  gbLuaState.cpp  gbLuaState.h  gbNWMessageDispatcher.cpp  gbNWMessageDispatcher.h  gbReceptionistComm.cpp  gbReceptionistComm.h  gbServer.cpp  gbSvrIODataDispatcher.cpp  gbSvrIODataDispatcher.h  gbSvrIOEventDispatcher.cpp  gbSvrIOEventDispatcher.h  gbSvrIORecvDataDispatcher.cpp  gbSvrIORecvDataDispatcher.h  gbSvrLogic.cpp  gbSvrLogic.h  gbSvrLogicLoop.cpp  gbSvrLogicLoop.h  gbSvrNet.cpp  gbSvrNet.h  gbSvrUDPData.cpp  gbSvrUDPData.h  gbTCPPkgHandler.cpp  gbTCPPkgHandler.h  gbUDPDataHandler.cpp  gbUDPDataHandler.h  server.cpp
Server/Core/: gbSvrCore.cpp  gbSvrCore.h  gbSvrUsr.cpp  gbSvrUsr.h
Server/Data/: accInfo.lua  accInfo_loader.lua  gbAccInfo.cpp  gbAccInfo.h
Server/Script/: gbAccMgr.lua  gbRPCAPI.lua  gbSvrCore.lua
Server/Script/LLA/: gbDataMgr.lua  gbLLA.lua
Server/Script/LNA/: gbAccMgr.lua  gbLNA.lua
